src/parsing/program_parser/program.output
Grammar

    0 $accept: program "end of file"

    1 program: sequence_statement
    2        | conjunctive_formula

    3 opt_semicolon: ";"
    4              | %empty

    5 sequence_statement: statement opt_semicolon
    6                   | statement ";" sequence_statement

    7 statement: simple_statement
    8          | if_statement
    9          | loop_statement

   10 if_statement: "if" conjunctive_formula "then" sequence_statement "end"
   11             | "if" conjunctive_formula "then" sequence_statement "else" sequence_statement "end"

   12 loop_statement: "while" conjunctive_formula "do" sequence_statement "end"

   13 local_statement: "local" variable_term
   14                | "local" variable_term "=" term
   15                | "local" variable_term "[" term "]"

   16 simple_statement: assignment
   17                 | "nop"
   18                 | local_statement

   19 assignment: lvalue_term "=" term

   20 conjunctive_formula: atomic_formula
   21                    | non_atomic_conjunctive_formula

   22 non_atomic_conjunctive_formula: "(" non_atomic_conjunctive_formula ")"
   23                               | atomic_formula "&&" conjunctive_formula

   24 atomic_formula: term
   25               | predicate_formula
   26               | "!" atomic_formula

   27 predicate_formula: "(" predicate_formula ")"
   28                  | term predicate_operator term

   29 predicate_operator: "=="
   30                   | "!="
   31                   | "<"
   32                   | "<="
   33                   | ">="
   34                   | ">"

   35 term: integer
   36     | lvalue_term
   37     | "(" term ")"
   38     | "-" term
   39     | term "+" term
   40     | term "-" term
   41     | term "*" term
   42     | term "/" term
   43     | term "%" term
   44     | "(" "if" conjunctive_formula "then" term "else" term ")"

   45 lvalue_term: variable_term
   46            | variable_term "[" term "]"

   47 variable_term: "identifier"

   48 integer: "integer"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"=" (258) 14 19
"(" (259) 22 27 37 44
")" (260) 22 27 37 44
"[" (261) 15 46
"]" (262) 15 46
";" (263) 3 6
"+" (264) 39
"-" (265) 38 40
"*" (266) 41
"/" (267) 42
"%" (268) 43
"&&" (269) 23
"!" (270) 26
"==" (271) 29
"!=" (272) 30
"<=" (273) 32
">=" (274) 33
"<" (275) 31
">" (276) 34
"if" (277) 10 11 44
"end" (278) 10 11 12
"then" (279) 10 11 44
"else" (280) 11 44
"while" (281) 12
"do" (282) 12
"nop" (283) 17
"local" (284) 13 14 15
"identifier" (285) 47
"integer" (286) 48
UMINUS (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1 2, on right: 0
opt_semicolon (35)
    on left: 3 4, on right: 5
sequence_statement (36)
    on left: 5 6, on right: 1 6 10 11 12
statement (37)
    on left: 7 8 9, on right: 5 6
if_statement (38)
    on left: 10 11, on right: 8
loop_statement (39)
    on left: 12, on right: 9
local_statement (40)
    on left: 13 14 15, on right: 18
simple_statement (41)
    on left: 16 17 18, on right: 7
assignment (42)
    on left: 19, on right: 16
conjunctive_formula (43)
    on left: 20 21, on right: 2 10 11 12 23 44
non_atomic_conjunctive_formula (44)
    on left: 22 23, on right: 21 22
atomic_formula (45)
    on left: 24 25 26, on right: 20 23 26
predicate_formula (46)
    on left: 27 28, on right: 25 27
predicate_operator (47)
    on left: 29 30 31 32 33 34, on right: 28
term (48)
    on left: 35 36 37 38 39 40 41 42 43 44, on right: 14 15 19 24 28
    37 38 39 40 41 42 43 44 46
lvalue_term (49)
    on left: 45 46, on right: 19 36
variable_term (50)
    on left: 47, on right: 13 14 15 45 46
integer (51)
    on left: 48, on right: 35


State 0

    0 $accept: . program "end of file"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "nop"         shift, and go to state 6
    "local"       shift, and go to state 7
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    program                         go to state 10
    sequence_statement              go to state 11
    statement                       go to state 12
    if_statement                    go to state 13
    loop_statement                  go to state 14
    local_statement                 go to state 15
    simple_statement                go to state 16
    assignment                      go to state 17
    conjunctive_formula             go to state 18
    non_atomic_conjunctive_formula  go to state 19
    atomic_formula                  go to state 20
    predicate_formula               go to state 21
    term                            go to state 22
    lvalue_term                     go to state 23
    variable_term                   go to state 24
    integer                         go to state 25


State 1

   22 non_atomic_conjunctive_formula: "(" . non_atomic_conjunctive_formula ")"
   27 predicate_formula: "(" . predicate_formula ")"
   37 term: "(" . term ")"
   44     | "(" . "if" conjunctive_formula "then" term "else" term ")"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "if"          shift, and go to state 26
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    non_atomic_conjunctive_formula  go to state 27
    atomic_formula                  go to state 28
    predicate_formula               go to state 29
    term                            go to state 30
    lvalue_term                     go to state 31
    variable_term                   go to state 24
    integer                         go to state 25


State 2

   38 term: "-" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 33
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 3

   26 atomic_formula: "!" . atomic_formula

    "("           shift, and go to state 34
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    atomic_formula     go to state 35
    predicate_formula  go to state 21
    term               go to state 22
    lvalue_term        go to state 31
    variable_term      go to state 24
    integer            go to state 25


State 4

   10 if_statement: "if" . conjunctive_formula "then" sequence_statement "end"
   11             | "if" . conjunctive_formula "then" sequence_statement "else" sequence_statement "end"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    conjunctive_formula             go to state 36
    non_atomic_conjunctive_formula  go to state 19
    atomic_formula                  go to state 20
    predicate_formula               go to state 21
    term                            go to state 22
    lvalue_term                     go to state 31
    variable_term                   go to state 24
    integer                         go to state 25


State 5

   12 loop_statement: "while" . conjunctive_formula "do" sequence_statement "end"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    conjunctive_formula             go to state 37
    non_atomic_conjunctive_formula  go to state 19
    atomic_formula                  go to state 20
    predicate_formula               go to state 21
    term                            go to state 22
    lvalue_term                     go to state 31
    variable_term                   go to state 24
    integer                         go to state 25


State 6

   17 simple_statement: "nop" .

    $default  reduce using rule 17 (simple_statement)


State 7

   13 local_statement: "local" . variable_term
   14                | "local" . variable_term "=" term
   15                | "local" . variable_term "[" term "]"

    "identifier"  shift, and go to state 8

    variable_term  go to state 38


State 8

   47 variable_term: "identifier" .

    $default  reduce using rule 47 (variable_term)


State 9

   48 integer: "integer" .

    $default  reduce using rule 48 (integer)


State 10

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 39


State 11

    1 program: sequence_statement .

    $default  reduce using rule 1 (program)


State 12

    5 sequence_statement: statement . opt_semicolon
    6                   | statement . ";" sequence_statement

    ";"  shift, and go to state 40

    $default  reduce using rule 4 (opt_semicolon)

    opt_semicolon  go to state 41


State 13

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


State 14

    9 statement: loop_statement .

    $default  reduce using rule 9 (statement)


State 15

   18 simple_statement: local_statement .

    $default  reduce using rule 18 (simple_statement)


State 16

    7 statement: simple_statement .

    $default  reduce using rule 7 (statement)


State 17

   16 simple_statement: assignment .

    $default  reduce using rule 16 (simple_statement)


State 18

    2 program: conjunctive_formula .

    $default  reduce using rule 2 (program)


State 19

   21 conjunctive_formula: non_atomic_conjunctive_formula .

    $default  reduce using rule 21 (conjunctive_formula)


State 20

   20 conjunctive_formula: atomic_formula .
   23 non_atomic_conjunctive_formula: atomic_formula . "&&" conjunctive_formula

    "&&"  shift, and go to state 42

    $default  reduce using rule 20 (conjunctive_formula)


State 21

   25 atomic_formula: predicate_formula .

    $default  reduce using rule 25 (atomic_formula)


State 22

   24 atomic_formula: term .
   28 predicate_formula: term . predicate_operator term
   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "+"   shift, and go to state 43
    "-"   shift, and go to state 44
    "*"   shift, and go to state 45
    "/"   shift, and go to state 46
    "%"   shift, and go to state 47
    "=="  shift, and go to state 48
    "!="  shift, and go to state 49
    "<="  shift, and go to state 50
    ">="  shift, and go to state 51
    "<"   shift, and go to state 52
    ">"   shift, and go to state 53

    $default  reduce using rule 24 (atomic_formula)

    predicate_operator  go to state 54


State 23

   19 assignment: lvalue_term . "=" term
   36 term: lvalue_term .

    "="  shift, and go to state 55

    $default  reduce using rule 36 (term)


State 24

   45 lvalue_term: variable_term .
   46            | variable_term . "[" term "]"

    "["  shift, and go to state 56

    $default  reduce using rule 45 (lvalue_term)


State 25

   35 term: integer .

    $default  reduce using rule 35 (term)


State 26

   44 term: "(" "if" . conjunctive_formula "then" term "else" term ")"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    conjunctive_formula             go to state 57
    non_atomic_conjunctive_formula  go to state 19
    atomic_formula                  go to state 20
    predicate_formula               go to state 21
    term                            go to state 22
    lvalue_term                     go to state 31
    variable_term                   go to state 24
    integer                         go to state 25


State 27

   22 non_atomic_conjunctive_formula: "(" non_atomic_conjunctive_formula . ")"

    ")"  shift, and go to state 58


State 28

   23 non_atomic_conjunctive_formula: atomic_formula . "&&" conjunctive_formula

    "&&"  shift, and go to state 42


State 29

   25 atomic_formula: predicate_formula .
   27 predicate_formula: "(" predicate_formula . ")"

    ")"  shift, and go to state 59

    $default  reduce using rule 25 (atomic_formula)


State 30

   24 atomic_formula: term .
   28 predicate_formula: term . predicate_operator term
   37 term: "(" term . ")"
   39     | term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    ")"   shift, and go to state 60
    "+"   shift, and go to state 43
    "-"   shift, and go to state 44
    "*"   shift, and go to state 45
    "/"   shift, and go to state 46
    "%"   shift, and go to state 47
    "=="  shift, and go to state 48
    "!="  shift, and go to state 49
    "<="  shift, and go to state 50
    ">="  shift, and go to state 51
    "<"   shift, and go to state 52
    ">"   shift, and go to state 53

    $default  reduce using rule 24 (atomic_formula)

    predicate_operator  go to state 54


State 31

   36 term: lvalue_term .

    $default  reduce using rule 36 (term)


State 32

   37 term: "(" . term ")"
   44     | "(" . "if" conjunctive_formula "then" term "else" term ")"

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "if"          shift, and go to state 26
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 61
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 33

   38 term: "-" term .
   39     | term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    $default  reduce using rule 38 (term)


State 34

   27 predicate_formula: "(" . predicate_formula ")"
   37 term: "(" . term ")"
   44     | "(" . "if" conjunctive_formula "then" term "else" term ")"

    "("           shift, and go to state 34
    "-"           shift, and go to state 2
    "if"          shift, and go to state 26
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    predicate_formula  go to state 62
    term               go to state 63
    lvalue_term        go to state 31
    variable_term      go to state 24
    integer            go to state 25


State 35

   26 atomic_formula: "!" atomic_formula .

    $default  reduce using rule 26 (atomic_formula)


State 36

   10 if_statement: "if" conjunctive_formula . "then" sequence_statement "end"
   11             | "if" conjunctive_formula . "then" sequence_statement "else" sequence_statement "end"

    "then"  shift, and go to state 64


State 37

   12 loop_statement: "while" conjunctive_formula . "do" sequence_statement "end"

    "do"  shift, and go to state 65


State 38

   13 local_statement: "local" variable_term .
   14                | "local" variable_term . "=" term
   15                | "local" variable_term . "[" term "]"

    "="  shift, and go to state 66
    "["  shift, and go to state 67

    $default  reduce using rule 13 (local_statement)


State 39

    0 $accept: program "end of file" .

    $default  accept


State 40

    3 opt_semicolon: ";" .
    6 sequence_statement: statement ";" . sequence_statement

    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "nop"         shift, and go to state 6
    "local"       shift, and go to state 7
    "identifier"  shift, and go to state 8

    $default  reduce using rule 3 (opt_semicolon)

    sequence_statement  go to state 68
    statement           go to state 12
    if_statement        go to state 13
    loop_statement      go to state 14
    local_statement     go to state 15
    simple_statement    go to state 16
    assignment          go to state 17
    lvalue_term         go to state 69
    variable_term       go to state 24


State 41

    5 sequence_statement: statement opt_semicolon .

    $default  reduce using rule 5 (sequence_statement)


State 42

   23 non_atomic_conjunctive_formula: atomic_formula "&&" . conjunctive_formula

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "!"           shift, and go to state 3
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    conjunctive_formula             go to state 70
    non_atomic_conjunctive_formula  go to state 19
    atomic_formula                  go to state 20
    predicate_formula               go to state 21
    term                            go to state 22
    lvalue_term                     go to state 31
    variable_term                   go to state 24
    integer                         go to state 25


State 43

   39 term: term "+" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 71
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 44

   40 term: term "-" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 72
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 45

   41 term: term "*" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 73
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 46

   42 term: term "/" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 74
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 47

   43 term: term "%" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 75
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 48

   29 predicate_operator: "==" .

    $default  reduce using rule 29 (predicate_operator)


State 49

   30 predicate_operator: "!=" .

    $default  reduce using rule 30 (predicate_operator)


State 50

   32 predicate_operator: "<=" .

    $default  reduce using rule 32 (predicate_operator)


State 51

   33 predicate_operator: ">=" .

    $default  reduce using rule 33 (predicate_operator)


State 52

   31 predicate_operator: "<" .

    $default  reduce using rule 31 (predicate_operator)


State 53

   34 predicate_operator: ">" .

    $default  reduce using rule 34 (predicate_operator)


State 54

   28 predicate_formula: term predicate_operator . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 76
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 55

   19 assignment: lvalue_term "=" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 77
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 56

   46 lvalue_term: variable_term "[" . term "]"

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 78
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 57

   44 term: "(" "if" conjunctive_formula . "then" term "else" term ")"

    "then"  shift, and go to state 79


State 58

   22 non_atomic_conjunctive_formula: "(" non_atomic_conjunctive_formula ")" .

    $default  reduce using rule 22 (non_atomic_conjunctive_formula)


State 59

   27 predicate_formula: "(" predicate_formula ")" .

    $default  reduce using rule 27 (predicate_formula)


State 60

   37 term: "(" term ")" .

    $default  reduce using rule 37 (term)


State 61

   37 term: "(" term . ")"
   39     | term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    ")"  shift, and go to state 60
    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47


State 62

   27 predicate_formula: "(" predicate_formula . ")"

    ")"  shift, and go to state 59


State 63

   28 predicate_formula: term . predicate_operator term
   37 term: "(" term . ")"
   39     | term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    ")"   shift, and go to state 60
    "+"   shift, and go to state 43
    "-"   shift, and go to state 44
    "*"   shift, and go to state 45
    "/"   shift, and go to state 46
    "%"   shift, and go to state 47
    "=="  shift, and go to state 48
    "!="  shift, and go to state 49
    "<="  shift, and go to state 50
    ">="  shift, and go to state 51
    "<"   shift, and go to state 52
    ">"   shift, and go to state 53

    predicate_operator  go to state 54


State 64

   10 if_statement: "if" conjunctive_formula "then" . sequence_statement "end"
   11             | "if" conjunctive_formula "then" . sequence_statement "else" sequence_statement "end"

    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "nop"         shift, and go to state 6
    "local"       shift, and go to state 7
    "identifier"  shift, and go to state 8

    sequence_statement  go to state 80
    statement           go to state 12
    if_statement        go to state 13
    loop_statement      go to state 14
    local_statement     go to state 15
    simple_statement    go to state 16
    assignment          go to state 17
    lvalue_term         go to state 69
    variable_term       go to state 24


State 65

   12 loop_statement: "while" conjunctive_formula "do" . sequence_statement "end"

    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "nop"         shift, and go to state 6
    "local"       shift, and go to state 7
    "identifier"  shift, and go to state 8

    sequence_statement  go to state 81
    statement           go to state 12
    if_statement        go to state 13
    loop_statement      go to state 14
    local_statement     go to state 15
    simple_statement    go to state 16
    assignment          go to state 17
    lvalue_term         go to state 69
    variable_term       go to state 24


State 66

   14 local_statement: "local" variable_term "=" . term

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 82
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 67

   15 local_statement: "local" variable_term "[" . term "]"

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 83
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 68

    6 sequence_statement: statement ";" sequence_statement .

    $default  reduce using rule 6 (sequence_statement)


State 69

   19 assignment: lvalue_term . "=" term

    "="  shift, and go to state 55


State 70

   23 non_atomic_conjunctive_formula: atomic_formula "&&" conjunctive_formula .

    $default  reduce using rule 23 (non_atomic_conjunctive_formula)


State 71

   39 term: term . "+" term
   39     | term "+" term .
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47

    $default  reduce using rule 39 (term)


State 72

   39 term: term . "+" term
   40     | term . "-" term
   40     | term "-" term .
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47

    $default  reduce using rule 40 (term)


State 73

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   41     | term "*" term .
   42     | term . "/" term
   43     | term . "%" term

    $default  reduce using rule 41 (term)


State 74

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   42     | term "/" term .
   43     | term . "%" term

    $default  reduce using rule 42 (term)


State 75

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term
   43     | term "%" term .

    $default  reduce using rule 43 (term)


State 76

   28 predicate_formula: term predicate_operator term .
   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47

    $default  reduce using rule 28 (predicate_formula)


State 77

   19 assignment: lvalue_term "=" term .
   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47

    $default  reduce using rule 19 (assignment)


State 78

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term
   46 lvalue_term: variable_term "[" term . "]"

    "]"  shift, and go to state 84
    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47


State 79

   44 term: "(" "if" conjunctive_formula "then" . term "else" term ")"

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 85
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 80

   10 if_statement: "if" conjunctive_formula "then" sequence_statement . "end"
   11             | "if" conjunctive_formula "then" sequence_statement . "else" sequence_statement "end"

    "end"   shift, and go to state 86
    "else"  shift, and go to state 87


State 81

   12 loop_statement: "while" conjunctive_formula "do" sequence_statement . "end"

    "end"  shift, and go to state 88


State 82

   14 local_statement: "local" variable_term "=" term .
   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47

    $default  reduce using rule 14 (local_statement)


State 83

   15 local_statement: "local" variable_term "[" term . "]"
   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term

    "]"  shift, and go to state 89
    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47


State 84

   46 lvalue_term: variable_term "[" term "]" .

    $default  reduce using rule 46 (lvalue_term)


State 85

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term
   44     | "(" "if" conjunctive_formula "then" term . "else" term ")"

    "+"     shift, and go to state 43
    "-"     shift, and go to state 44
    "*"     shift, and go to state 45
    "/"     shift, and go to state 46
    "%"     shift, and go to state 47
    "else"  shift, and go to state 90


State 86

   10 if_statement: "if" conjunctive_formula "then" sequence_statement "end" .

    $default  reduce using rule 10 (if_statement)


State 87

   11 if_statement: "if" conjunctive_formula "then" sequence_statement "else" . sequence_statement "end"

    "if"          shift, and go to state 4
    "while"       shift, and go to state 5
    "nop"         shift, and go to state 6
    "local"       shift, and go to state 7
    "identifier"  shift, and go to state 8

    sequence_statement  go to state 91
    statement           go to state 12
    if_statement        go to state 13
    loop_statement      go to state 14
    local_statement     go to state 15
    simple_statement    go to state 16
    assignment          go to state 17
    lvalue_term         go to state 69
    variable_term       go to state 24


State 88

   12 loop_statement: "while" conjunctive_formula "do" sequence_statement "end" .

    $default  reduce using rule 12 (loop_statement)


State 89

   15 local_statement: "local" variable_term "[" term "]" .

    $default  reduce using rule 15 (local_statement)


State 90

   44 term: "(" "if" conjunctive_formula "then" term "else" . term ")"

    "("           shift, and go to state 32
    "-"           shift, and go to state 2
    "identifier"  shift, and go to state 8
    "integer"     shift, and go to state 9

    term           go to state 92
    lvalue_term    go to state 31
    variable_term  go to state 24
    integer        go to state 25


State 91

   11 if_statement: "if" conjunctive_formula "then" sequence_statement "else" sequence_statement . "end"

    "end"  shift, and go to state 93


State 92

   39 term: term . "+" term
   40     | term . "-" term
   41     | term . "*" term
   42     | term . "/" term
   43     | term . "%" term
   44     | "(" "if" conjunctive_formula "then" term "else" term . ")"

    ")"  shift, and go to state 94
    "+"  shift, and go to state 43
    "-"  shift, and go to state 44
    "*"  shift, and go to state 45
    "/"  shift, and go to state 46
    "%"  shift, and go to state 47


State 93

   11 if_statement: "if" conjunctive_formula "then" sequence_statement "else" sequence_statement "end" .

    $default  reduce using rule 11 (if_statement)


State 94

   44 term: "(" "if" conjunctive_formula "then" term "else" term ")" .

    $default  reduce using rule 44 (term)
